--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,20 +3,37 @@
 <head>
 <title>Profile</title>
     <meta charset="UTF-8">
+
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/css/bootstrap-select.min.css">
+<!-- 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/css/bootstrap-select.min.css"> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    
+<!-- 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.5/js/bootstrap-select.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-       <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="style.css"> -->
+   <!--  
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script> -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!-- Bootstrap CDN -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+ <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script><!-- 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" sizes="16x16" href="images/logo.ico">
+
+
+
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -53,32 +70,23 @@
                 <h3 class="panel-title"><strong>Questionnaire</strong></h3>
             </div>
             <div class="panel-body">
-            	<h4><strong>Name:</strong></h4>
-                <input type="text" name="temp" placeholder="John/Jane" id="memQ1">
+            	<h4><strong>Prefered Name/ Nickname:</strong></h4>
+                <input type="text" name="temp" placeholder="John/Jane" id="q1">
 
                 <h4><strong>Age:</strong></h4>
-                <input type="text" name="temp" placeholder="" id="memQ2">
+                <input type="text" name="temp" placeholder="" id="q2">
 
                 <h4><strong>Height in Inches:</strong></h4>
-                <input type="text" name="temp" placeholder="70" id="memQ3">
+                <input type="text" name="temp" placeholder="70" id="q3">
 
                 <h4><strong>Weight in lbs:</strong></h4>
-                <input type="text" name="temp" placeholder="190" id="memQ4">
+                <input type="text" name="temp" placeholder="140" id="q4">
 
                 <h4><strong>Gender:</strong></h4>
-                <input type="text" name="temp" placeholder="female" id="memQ5">
-
-                <h4><strong>ACL:</strong></h4>
-                <input type="text" name="temp" placeholder="70" id="memQ6">
-
-                <h4><strong> Are you sexually active?</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="memQ7">
-                    <option value="1">yes</option>
-                    <option value="2">no</option>
-                </select>
+                <input type="text" name="temp" placeholder="female" id="q5">
 
                 <h4><strong> Are you trying to conceive?</strong></h4>
-                <select data-placeholder="" class="chosen-select" id="memQ8">
+                <select data-placeholder="" class="chosen-select" id="q8">
                     <option value="1">yes</option>
                     <option value="2">no</option>
                 </select>
@@ -89,7 +97,7 @@
  <button id="submitButton" type="submit" class="btn btn-primary">
             <h4>Submit</h4></button>
 
-
+<script src="/js/profile.js"></script>
 
 <!-- <a href="/auth/logout"><button id="logout" href="/auth/logout">LOGOUT?</button></a> -->
 </body>
