--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -78,13 +78,13 @@
 
                 <h4><strong>Height in Inches:</strong></h4>
 
-                <input type="text" name="temp" placeholder="65" id="memQ3">
+                <input type="text" name="temp" placeholder="65" id="q3">
 
                 <h4><strong>Weight in lbs:</strong></h4>
-                <input type="text" name="temp" placeholder="140" id="memQ4">
+                <input type="text" name="temp" placeholder="140" id="q4">
 
                 <h4><strong>Gender:</strong></h4>
-                <input type="text" name="temp" placeholder="female" id="memQ5">
+                <input type="text" name="temp" placeholder="female" id="q5">
 
                 <h4><strong> Are you trying to conceive?</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="q8">
