ejs file and link  changes

--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -24,16 +24,16 @@
 <body>
     <nav class="nav">
         <ul class="nav justify-content-center">
-            <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
+            <a href="/login"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
             </div>
             <li class="nav-item">
-                <a class="nav-link active" href="/about.html">About</a>
+                <a class="nav-link active" href="/about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/members.html">Calendar</a>
+                <a class="nav-link" href="/members">Calendar</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/charts.html">Charts</a>
+                <a class="nav-link" href="/charts">Charts</a>
             </li>
             <li>
                 <a class="nav-link right" href="/auth/logout">Logout</a>
