--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,7 +17,7 @@
 <body>
     <nav class="nav">
         <div class="nav justify-content-center">
-            <a href="login.html"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
+            <a href="/login"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
         </div>
     </nav>
     <br>
