--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 <body>
     <nav class="nav">
         <div class="nav justify-content-center">
-            <a href="/login"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
+            <a href=""><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
         </div>
     </nav>
     <br>
@@ -27,7 +27,7 @@
                     <p class="lead ">A fertility tracking app, with a co-creative sharing
                         <br> option.</p>
                     <br>
-                    <a class="btn btn-primary btn-lg " href="about.ejs" role="button">Learn more</a>
+                    <a class="btn btn-primary btn-lg " href="/about" role="button">Learn more</a>
                     </p>
                 </div>
             </div> 
