--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,7 +38,7 @@
 <body>
 	<nav class="nav">
         <ul class="nav justify-content-center">
-            <a href="login.ejs"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
+            <a href="/login"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
             </div>
             <li class="nav-item">
                 <a class="nav-link active" href="/about">About</a>
