--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -52,7 +52,7 @@
     </div>
     <br>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-10 mid">
             <div class="chart-container-2 placeholder">
                 <h2>SYMPTOMS</h2>
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <br>
+    <br> -->
     <!-- New User Input -->
     <div class="row">
         <div class="col-md-10 mid">
@@ -137,7 +137,7 @@
 
 
                 <h4 id="temp-heading"><strong>Basal Body Temperature(BBT) in degrees Fahrenheit.</strong></h4>
-                <input type="text" name="temp" placeholder="98" id="Q1">
+                <input type="text" name="temp" id="Q1">
                 <h4 id="mood-heading"><strong>Mood</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q2">
                <!--      <option value=""></option> -->
