changed input to value

--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -137,7 +137,7 @@
 
 
                 <h4 id="temp-heading"><strong>Basal Body Temperature(BBT) in degrees Fahrenheit.</strong></h4>
-                <input type="number" step="0.01" name="temp" id="Q1">
+                <input type="value" step="0.01" name="temp" id="Q1">
                 <h4 id="mood-heading"><strong>Mood</strong></h4>
                 <select data-placeholder="" class="chosen-select" id="Q2">
                <!--      <option value=""></option> -->
