--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -63,7 +63,7 @@
     </div>
     <br> -->
     <!-- New User Input -->
-    <div class="row">
+ <!--    <div class="row">
         <div class="col-md-10 mid">
             <div class="container">
                 <div class="page-header">
@@ -77,7 +77,7 @@
                     <h4><strong> What was the first day of your last period?</strong></h4>
                     <input id="date" type="date">
                     <h4 id="cycle-length"><strong>What is your average cycle length?</strong></h4>
-                    <select data-placeholder="" class="chosen-select" id="Q1">
+                    <select data-placeholder="" class="chosen-select" id="a1">
                         <option value=""></option>
                         <option value="14">14 days</option>
                         <option value="15">15 days</option>
@@ -108,10 +108,10 @@
                    </select>
                 </div>
             </div>
-     <!--  Submit Button -->
-        <button id="submitButton" type="submit" class="btn btn-primary">
+     <!  Submit Button -->
+<!--         <button id="submitButton" type="submit" class="btn btn-primary">
             <h4>Submit</h4></button>
-
+ --> 
             <!-- Daily Input -->
         <div class="container">
             <div class="page-header">
