--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,8 +27,9 @@
                     <p class="lead ">A fertility tracking app, with a co-creative sharing
                         <br> option.</p>
                     <br>
-                    <a class="btn btn-primary btn-lg " href="/about" role="button">Learn more</a>
-                    </p>
+                    <a class="btn btn-primary btn-lg " href="/about" role="button" style="margin-left: 4px; margin-bottom: 5px;">Learn more</a>
+                    <br>
+                    <a href="/auth/google"><img src="images/googlesignin.png" style="height: 58px; width: auto;" alt="googlesignin"></a>
                 </div>
             </div> 
         </div>
@@ -38,7 +39,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
               
-                <a href="/auth/google"><img src="images/googlesignin.png" width="250" height="75" alt="googlesignin"></a>
+
 
             </div>
         </div>
