--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -52,7 +52,7 @@
     </div>
     <br>
 
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-md-10 mid">
             <div class="chart-container-2 placeholder">
                 <h2>SYMPTOMS</h2>
@@ -61,9 +61,9 @@
             </div>
         </div>
     </div>
-    <br> -->
+    <br>
     <!-- New User Input -->
- <!--    <div class="row">
+    <div class="row">
         <div class="col-md-10 mid">
             <div class="container">
                 <div class="page-header">
@@ -109,10 +109,10 @@
                    </select>
                 </div>
             </div>
-     <!  Submit Button -->
-<!--         <button id="submitButton" type="submit" class="btn btn-primary">
+<!--! Submit Button   --> 
+            <button id="submitButton" type="submit" class="btn btn-primary"> 
             <h4>Submit</h4></button>
- --> 
+
             <!-- Daily Input -->
         <div class="container">
             <div class="page-header">
