--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,12 +15,26 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="nav justify-content-center">
+     <nav class="nav">
+        <ul class="nav justify-content-center">
             <a href="/login"><img src="images/logo.png" alt="perfecttime" id="brand-image"></a>
-        </div>
+            </div>
+            <li class="nav-item">
+                <a class="nav-link active" href="/about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/members">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/charts">Charts</a>
+            </li>
+            <li>
+                <a class="nav-link right" href="/auth/logout">Logout</a>
+            </li>
+        </ul>
     </nav>
     <br>
+   
 
     <div class="jumbotron2">
         <div class="container">
