--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -35,7 +35,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/charts">Charts</a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a class="nav-link right" href="/auth/logout">Logout</a>
             </li>
         </ul>
